--- a/app/src/main/res/layout/fragment_remover_inventario.xml
+++ b/app/src/main/res/layout/fragment_remover_inventario.xml
@@ -573,10 +573,53 @@
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvElegirProductoRemover"
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/nsvElegirProductoRemover"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="180dp"
+                android:fillViewport="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvElegirProductoRemover"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </LinearLayout>
+
+            </androidx.core.widget.NestedScrollView>
+
+            <LinearLayout
+                android:id="@+id/llMontoRemover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvFacturaTotalRemover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="5dp"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:text="Factura total: $ "/>
+
+                <TextView
+                    android:id="@+id/tvMontoRemover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="1dp"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:text="0"/>
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/bActualizarRecyclerViewRemover"
