Reportes terminados menos el de transferencia y transacciones

--- a/app/src/main/res/layout/fragment_anadir_cliente.xml
+++ b/app/src/main/res/layout/fragment_anadir_cliente.xml
@@ -44,6 +44,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="90dp"
                 android:gravity="center"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:hint="@string/placeholder_nombre_cliente"
                 android:inputType="text"
                 android:backgroundTint="@color/color_list"
@@ -68,6 +70,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="90dp"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:hint="@string/placeholder_rut_cliente"
                 android:backgroundTint="@color/color_list"
                 android:inputType="text"
@@ -97,6 +101,8 @@
                 android:backgroundTint="@color/color_list"
                 android:inputType="textEmailAddress"
                 android:gravity="center"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/color_list"
                 android:textSize="15sp"
@@ -122,6 +128,8 @@
                 android:backgroundTint="@color/color_list"
                 android:inputType="phone"
                 android:gravity="center"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/color_list"
                 android:textSize="15sp"
@@ -149,6 +157,8 @@
                 android:backgroundTint="@color/color_list"
                 android:inputType="text"
                 android:gravity="center"
+                android:maxLines="1"
+                android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/color_list"
                 android:textSize="15sp"
