--- a/app/src/main/res/layout/fragment_anadir_producto.xml
+++ b/app/src/main/res/layout/fragment_anadir_producto.xml
@@ -79,6 +79,8 @@
                     android:layout_marginHorizontal="90dp"
                     android:backgroundTint="@color/color_list"
                     android:gravity="center"
+                    android:maxLines="1"
+                    android:singleLine="true"
                     android:hint="@string/placeholder_peso_producto"
                     android:inputType="numberDecimal"
                     android:textColor="@color/black"
@@ -107,6 +109,8 @@
                     android:backgroundTint="@color/color_list"
                     android:gravity="center"
                     android:hint="@string/placeholder_volumen_producto"
+                    android:maxLines="1"
+                    android:singleLine="true"
                     android:inputType="numberDecimal"
                     android:textColor="@color/black"
                     android:textColorHint="@color/color_list"
@@ -224,6 +228,8 @@
                     android:layout_marginHorizontal="90dp"
                     android:backgroundTint="@color/color_list"
                     android:gravity="center"
+                    android:maxLines="1"
+                    android:singleLine="true"
                     android:hint="@string/placeholder_codigo_barra_producto"
                     android:inputType="text"
                     android:textColor="@color/black"
@@ -252,6 +258,8 @@
                     android:gravity="center"
                     android:hint="@string/placeholder_codigo_barra_embalaje"
                     android:inputType="text"
+                    android:maxLines="1"
+                    android:singleLine="true"
                     android:textColor="@color/black"
                     android:textColorHint="@color/color_list"
                     android:textSize="15sp"
@@ -277,6 +285,8 @@
                     android:layout_marginHorizontal="90dp"
                     android:backgroundTint="@color/color_list"
                     android:gravity="center"
+                    android:maxLines="1"
+                    android:singleLine="true"
                     android:hint="@string/placeholder_unidades_embalaje"
                     android:inputType="number"
                     android:textColor="@color/black"
