--- a/app/src/main/res/layout/fragment_editar_cliente.xml
+++ b/app/src/main/res/layout/fragment_editar_cliente.xml
@@ -154,6 +154,45 @@
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
+                <TextView
+                    android:id="@+id/tvEstadoClienteEditar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_marginVertical="30dp"
+                    android:text="@string/title_cliente_editar"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <RadioGroup
+                        android:id="@+id/radioGroupEstadoCliente"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:id="@+id/EstadoClienteRadioButton1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="30dp"
+                            android:text="Vigente" />
+
+                        <RadioButton
+                            android:id="@+id/EstadoClienteRadioButton2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="No vigente" />
+                    </RadioGroup>
+
+                </LinearLayout>
+
                 <Button
                     android:id="@+id/buttonCliente"
                     android:layout_width="100dp"
