--- a/app/src/main/res/layout/fragment_editar_almacen.xml
+++ b/app/src/main/res/layout/fragment_editar_almacen.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rlEditarAlmacen"
     tools:context=".ui.Formularios.añadirAlmacen.AnadirAlmacenFragment">
 
     <ScrollView
@@ -17,17 +18,15 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:clickable="true"
+            android:focusable="true"
             android:longClickable="true"
             android:orientation="vertical"
             android:focusableInTouchMode="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
-
-
-
 
             <TextView
                 android:id="@+id/tvAlmacenEditable"
@@ -78,6 +77,45 @@
                 android:textColorHint="@color/color_list"
                 android:textSize="15sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvEstadoAlmacenEditar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_marginVertical="30dp"
+                android:text="@string/title_cliente_editar"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioGroup
+                    android:id="@+id/radioGroupEstadoAlmacen"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/EstadoAlmacenRadioButton1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="30dp"
+                        android:text="Vigente" />
+
+                    <RadioButton
+                        android:id="@+id/EstadoAlmacenRadioButton2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No vigente" />
+                </RadioGroup>
+
+            </LinearLayout>
 
 
             <TextView
@@ -130,10 +168,62 @@
                 android:layout_marginVertical="40dp"
                 android:text="@string/button_send" />
 
+            <LinearLayout
+                android:id="@+id/llInventariosDeProducto"
+                android:layout_width="360dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginStart="25dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/roundcorner">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        android:text="Producto"
+                        android:textColor="@color/black"
+                        android:paddingEnd="90dp"
+                        android:layout_marginStart="10dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:text="Inventario" />
+
+                </LinearLayout>
+
+                <TableLayout
+                    android:id="@+id/tlInventariosDeProducto"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="20dp"
+                    android:gravity="center"
+                    android:background="@color/orange">
+
+                </TableLayout>
+
+
+            </LinearLayout>
+
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
