--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -9,49 +9,49 @@
     tools:context=".ui.inicio.InicioFragment">
 
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/cream">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/cream">
 
-    <!-- MITAnto-->
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="40sp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"/>
-
-    <!-- Letreros blancos -->
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvAInventory"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        app:cardBackgroundColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/cvVInventory"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        <!-- MITAnto-->
         <TextView
-            android:id="@+id/tvAInventoryNumber"
-            android:layout_width="match_parent"
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/light_green"
-            android:text="0"
-            android:gravity="center"
-            android:textSize="20sp"/>
+            android:text="@string/app_name"
+            android:textColor="@color/black"
+            android:textSize="40sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.3" />
 
-    </androidx.cardview.widget.CardView>
+        <!-- Letreros blancos -->
 
-    <androidx.cardview.widget.CardView
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvAInventory"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            app:cardBackgroundColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tvAInventoryNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="0"
+                android:textColor="@color/light_green"
+                android:textSize="20sp" />
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- <androidx.cardview.widget.CardView
         android:id="@+id/cvVInventory"
         android:layout_width="100dp"
         android:layout_height="30dp"
@@ -70,24 +70,23 @@
             android:gravity="center"
             android:textSize="20sp"/>
 
-    </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView> -->
 
-    <!-- Letras en Azul-->
+        <!-- Letras en Azul-->
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Inventory_items"
-        android:textColor="@color/blue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.18"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cvAInventory"
-        app:layout_constraintVertical_bias="0.1" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Inventory_items"
+            android:textColor="@color/blue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cvAInventory"
+            app:layout_constraintVertical_bias="0.1" />
 
-    <TextView
+        <!-- <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -99,91 +98,92 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.83"
         app:layout_constraintVertical_bias="0.1"
-        />
+        />-->
 
-    <!-- Estadisticas -->
-    <TextView
-        android:id="@+id/tvStatistics"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/statistics"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cvVInventory"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.3"
-        />
+        <!-- Estadisticas -->
 
-    <!-- Letreros verdes -->
+        <!-- Letreros verdes -->
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvAddInventory"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:cardCornerRadius="16dp"
-        app:cardBackgroundColor="@color/light_green"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2">
-
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/LLAddInventory"
+       <!-- <TextView
+            android:id="@+id/tvStatistics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/statistics"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_gravity="center"
-            android:layout_marginVertical="10dp"
-            android:layout_marginHorizontal="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintVertical_bias="0.2" />-->
 
-            <TextView
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvAddInventory"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            app:cardBackgroundColor="@color/light_green"
+            app:cardCornerRadius="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView">
+
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/LLAddInventory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/Add_inventory"
-                android:textColor="@color/white"
-                android:gravity="center"/>
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView">
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/Add_inventory"
+                    android:textColor="@color/white" />
 
-    </androidx.cardview.widget.CardView>
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cvRemoveInventory"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        app:cardCornerRadius="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:cardBackgroundColor="@color/light_green"
-        app:layout_constraintTop_toBottomOf="@id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.81"
-        >
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/LLRemoveInventory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginVertical="10dp"
-            android:layout_marginHorizontal="10dp"
-            android:orientation="horizontal">
+        </androidx.cardview.widget.CardView>
 
-            <TextView
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvRemoveInventory"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            app:cardBackgroundColor="@color/light_green"
+            app:cardCornerRadius="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.81"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.82">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/LLRemoveInventory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/remove_inventory"
-                android:gravity="center"
-                android:textColor="@color/white"/>
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="10dp"
+                android:orientation="horizontal">
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/remove_inventory"
+                    android:textColor="@color/white" />
 
-    </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
