--- a/app/src/main/res/layout/item_almacen.xml
+++ b/app/src/main/res/layout/item_almacen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView android:layout_width="match_parent"
     android:id="@+id/cvAlmacen"
-    android:layout_height="150dp"
+    android:layout_height="50dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="16dp"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         />
 
-    <TextView
+   <!-- <TextView
         android:id="@+id/tvImagenName"
         android:layout_width="wrap_content"
         android:textSize="20sp"
@@ -40,6 +40,6 @@
         android:layout_gravity="center"
         android:textColor="@color/black"
         android:layout_marginTop="5dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"/>-->
 </LinearLayout>
 </androidx.cardview.widget.CardView>
