--- a/app/src/main/res/layout/fragment_barcode_scan_factura_entrada.xml
+++ b/app/src/main/res/layout/fragment_barcode_scan_factura_entrada.xml
@@ -15,7 +15,7 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <TextView
-        android:id="@+id/txtBarcodeValue"
+        android:id="@+id/txtBarcodeValueFacturaEntrada"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
