--- a/app/src/main/res/layout/fragment_editar_almacen.xml
+++ b/app/src/main/res/layout/fragment_editar_almacen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rlEditarAlmacen"
-    tools:context=".ui.Formularios.añadirAlmacen.AnadirAlmacenFragment">
+    tools:context=".ui.Reportes.misDatos.almacenes.editarAlmacen.EditarAlmacenFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -31,13 +31,13 @@
             <TextView
                 android:id="@+id/tvAlmacenEditable"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_marginVertical="30dp"
                 android:text="@string/textView_nombre_almacen"
                 android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <EditText
                 android:id="@+id/etNombreAlmacenEditable"
