--- a/app/src/main/res/layout/fragment_editar_factura_entrada.xml
+++ b/app/src/main/res/layout/fragment_editar_factura_entrada.xml
@@ -28,16 +28,33 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <!-- Nombre de la factura de entrada -->
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="95dp"
+                android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/tvNombreFacturaEntradaEditar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_marginVertical="30dp"
                 android:text="@string/textView_nombre_factura_entrada"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/ivEliminarFacturaEntrada"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:scaleType="centerCrop"
+                    android:layout_marginStart="30dp"
+                    android:layout_gravity="end|center"
+                    android:src="@drawable/ic_trash"/>
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/etNombreFacturaEntradaEditar"
