--- a/app/src/main/res/layout/fragment_editar_sin_factura.xml
+++ b/app/src/main/res/layout/fragment_editar_sin_factura.xml
@@ -52,16 +52,33 @@
                 android:textSize="15sp"
                 android:textStyle="bold" /> -->
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="120dp"
+                android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/tvAlmacenSinFactura"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_marginVertical="30dp"
                 android:text="@string/title_almacen_sin_factura"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/ivEliminarSinFactura"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:scaleType="centerCrop"
+                    android:layout_marginStart="60dp"
+                    android:layout_gravity="end|center"
+                    android:src="@drawable/ic_trash"/>
+
+            </LinearLayout>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
