--- a/app/src/main/res/layout/fragment_editar_tipos_de_productos.xml
+++ b/app/src/main/res/layout/fragment_editar_tipos_de_productos.xml
@@ -27,11 +27,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-
             <TextView
                 android:id="@+id/tvNombreTipoDeProductoEditar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_marginVertical="30dp"
                 android:text="@string/textView_nombre_tipo_de_producto"
