--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -377,6 +377,9 @@
         <action
             android:id="@+id/action_nav_editar_producto_to_nav_camara_actualizada"
             app:destination="@id/nav_camara_actualizada" />
+        <action
+            android:id="@+id/action_nav_editar_producto_to_nav_mis_datos"
+            app:destination="@id/nav_mis_datos" />
     </fragment>
     <fragment
         android:id="@+id/nav_barcode_scan_editar_producto"
@@ -446,6 +449,9 @@
         <action
             android:id="@+id/action_nav_editar_transferencias_to_nav_elegir_producto_editar_transferencias"
             app:destination="@id/nav_elegir_producto_editar_transferencias" />
+        <action
+            android:id="@+id/action_nav_editar_transferencias_to_nav_transferencias2"
+            app:destination="@id/nav_transferencias" />
     </fragment>
     <fragment
         android:id="@+id/nav_elegir_producto_editar_transferencias"
@@ -473,6 +479,9 @@
         <action
             android:id="@+id/action_nav_editar_tipos_de_productos_to_nav_editar_cantidad_tipos_de_productos"
             app:destination="@id/nav_editar_cantidad_tipos_de_productos" />
+        <action
+            android:id="@+id/action_nav_editar_tipos_de_productos_to_nav_mis_datos"
+            app:destination="@id/nav_mis_datos" />
     </fragment>
     <fragment
         android:id="@+id/nav_editar_cantidad_tipos_de_productos"
@@ -488,18 +497,27 @@
         android:name="com.seba.mitantonavigationdrawer.ui.Reportes.misDatos.almacenes.editarAlmacen.EditarAlmacenFragment"
         android:label="@string/menu_editar_almacen"
         tools:layout="@layout/fragment_editar_almacen" >
+        <action
+            android:id="@+id/action_nav_editar_almacen_to_nav_mis_datos"
+            app:destination="@id/nav_mis_datos" />
     </fragment>
     <fragment
         android:id="@+id/nav_editar_cliente"
         android:name="com.seba.mitantonavigationdrawer.ui.Reportes.misDatos.clientes.editarCliente.EditarClienteFragment"
         android:label="@string/menu_editar_cliente"
         tools:layout="@layout/fragment_editar_cliente" >
+        <action
+            android:id="@+id/action_nav_editar_cliente_to_nav_mis_datos"
+            app:destination="@id/nav_mis_datos" />
     </fragment>
     <fragment
         android:id="@+id/nav_editar_proveedor"
         android:name="com.seba.mitantonavigationdrawer.ui.Reportes.misDatos.proveedores.editarProveedor.EditarProveedorFragment"
         android:label="@string/menu_editar_proveedor"
         tools:layout="@layout/fragment_editar_proveedor" >
+        <action
+            android:id="@+id/action_nav_editar_proveedor_to_nav_mis_datos"
+            app:destination="@id/nav_mis_datos" />
     </fragment>
 
     <fragment
@@ -575,6 +593,12 @@
         android:name="com.seba.mitantonavigationdrawer.ui.Reportes.misDatos.transacciones.sinFactura.editarSinFactura.EditarSinFacturaFragment"
         android:label="@string/menu_editar_sin_factura"
         tools:layout="@layout/fragment_editar_sin_factura">
+        <action
+            android:id="@+id/action_nav_editar_sin_factura_to_nav_transacciones"
+            app:destination="@id/nav_transacciones" />
+        <action
+            android:id="@+id/action_nav_editar_sin_factura_to_nav_transacciones2"
+            app:destination="@id/nav_transacciones" />
     </fragment>
     <fragment
         android:id="@+id/nav_factura_entrada"
@@ -593,6 +617,9 @@
         <action
             android:id="@+id/action_nav_editar_factura_entrada_to_nav_elegir_producto_factura_entrada"
             app:destination="@id/nav_elegir_producto_factura_entrada" />
+        <action
+            android:id="@+id/action_nav_editar_factura_entrada_to_nav_transacciones"
+            app:destination="@id/nav_transacciones" />
     </fragment>
     <fragment
         android:id="@+id/nav_barcode_scan_factura_entrada"
@@ -626,6 +653,9 @@
         <action
             android:id="@+id/action_nav_editar_factura_salida_to_nav_barcode_scan_factura_salida"
             app:destination="@id/nav_barcode_scan_factura_salida" />
+        <action
+            android:id="@+id/action_nav_editar_factura_salida_to_nav_transacciones"
+            app:destination="@id/nav_transacciones" />
     </fragment>
     <fragment
         android:id="@+id/nav_barcode_scan_factura_salida"
